plugins/screencast: set frame timer to one shot

BUG: 469777


(cherry picked from commit 5ae170f1d6e4c1252c98318f9939ccca3baa235f)

(cherry picked from commit 416ed6479d38cbc21da1278db3e52f3c4e67ed90)